--- a/.github/workflows/loaderX86_64.yml
+++ b/.github/workflows/loaderX86_64.yml
@@ -10,7 +10,7 @@ on:
 #  TZ: "Asia/Tokyo"
 
 jobs:
-  check:
+  SetupClean:
     runs-on: ubuntu-latest
     timeout-minutes: 230
     permissions:
@@ -35,3 +35,24 @@ jobs:
         with:
           retain_days: 1
           keep_minimum_runs: 3
+  # =============================
+
+  ScanSetup:
+    runs-on: ubuntu-latest
+    timeout-minutes: 230
+    needs: SetupClean
+    strategy:
+      matrix:
+        node-version: [10.x, 12.x, 14.x, 15.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'adopt'
+
+    - name: Grant execute permission for gradlew
+      run: lscpu
