--- a/.github/workflows/loaderX86_64.yml
+++ b/.github/workflows/loaderX86_64.yml
@@ -43,7 +43,7 @@ jobs:
     needs: SetupClean
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x, 15.x]
+        scan: [opened, reopened, synchronize]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
